--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js?v=1"></script>
 
     <div id="nav_bar">
-        <img id="nav_logo" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/bar_chart.png" draggable="false">   
+        <img id="nav_logo" src="img/bar_chart.png" draggable="false">   
         
         <ul id="nav_list">
             <li class="nav_list_item">
                 <div class="nav_icon_wrap" onmousedown="get_started(document.getElementById('page_header'), event)">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_home.png" draggable="false">
+                    <img class="nav_icon" src="img/nav_home.png" draggable="false">
                 </div>                
             </li>
             <li class="nav_list_item">
                 <div class="nav_icon_wrap" onmousedown="get_started(rows[0], event)">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_table.png" draggable="false">
+                    <img class="nav_icon" src="img/nav_table.png" draggable="false">
                 </div>
             </li>
             <li class="nav_list_item">
                 <div class="nav_icon_wrap" onmousedown="get_started(document.getElementById('graph'), event)">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_graph.png" draggable="false">
+                    <img class="nav_icon" src="img/nav_graph.png" draggable="false">
                 </div>
             </li>
             <li class="nav_list_item">
                 <div class="nav_icon_wrap" onmousedown="get_started(document.getElementById('pie'), event)">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_pie.png" draggable="false">
+                    <img class="nav_icon" src="img/nav_pie.png" draggable="false">
                 </div>
             </li>
             <li class="nav_list_item">
                 <div class="nav_icon_wrap" onmousedown="get_started(document.getElementById('min_value'), event)">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_statistics.png" draggable="false">
+                    <img class="nav_icon" src="img/nav_statistics.png" draggable="false">
                 </div>
             </li>
             <li class="nav_list_item" id="nav_shortcut" >
                 <div class="nav_icon_wrap">
-                    <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_shortcut.png" draggable="false"> 
+                    <img class="nav_icon" src="img/nav_shortcut.png" draggable="false"> 
                 </div>
             </li>
 
@@ -52,7 +52,7 @@
                     <ul id="shortcut_list">
                         <li class="shortcut">
                             <div class="shortcut_key_wrap">
-                                <img id="tab_key" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/tab_icon.png" draggable="false">
+                                <img id="tab_key" src="img/tab_icon.png" draggable="false">
                             </div>     
 
                             <div class="img_description">Tab</div>
@@ -62,7 +62,7 @@
 
                         <li class="shortcut">
                             <div class="shortcut_key_wrap">
-                                <img id="enter_key" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/enter_icon.png" draggable="false">
+                                <img id="enter_key" src="img/enter_icon.png" draggable="false">
                             </div>
 
                             <div class="img_description">Enter</div>
@@ -76,14 +76,14 @@
 
         <div class="nav_list_item">
             <div class="nav_icon_wrap" onmousedown="print()">
-                <img class="nav_icon" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/nav_export.png" draggable="false"> 
+                <img class="nav_icon" src="img/nav_export.png" draggable="false"> 
             </div>
         </div>
     </div>
 
     <div class="image_container">
         <div id="image">
-            <img src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/statistics_background.jpeg">
+            <img src="img/statistics_background.jpeg">
         </div>
 
         <div id="image_border_bottom"></div>
@@ -109,7 +109,7 @@
                                 <div id="variable_header">
                                     <input type="text" name="variable_cell" class="header" placeholder="Variable Name" required autocomplete="off">
 
-                                    <img id="variable_info" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/info.png">
+                                    <img id="variable_info" src="img/info.png">
                                     <div id="variable_info_pop_up">For Continuous Variables: [a, b[</div>
                                 </div>
                             </th>  
@@ -177,7 +177,7 @@
         <div id="stats_header_wrap">
             <header id="stats_header">Statistics</header>
 
-            <img id="stat_info" src="C:/Users/Mathis Jean/OneDrive/Personal/Learning/Programming/JavaScript Projects/Statistics Graphing Calculator/img/info_blue.png">
+            <img id="stat_info" src="img/info_blue.png">
 
             <div id="stat_pop_up">Order Variables Logically to Avoid Quartile Errors</div>
         </div>
