--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="../js/statisticsGraphingCalculator_V0.4.js" defer></script>
+    <script src="js/statisticsGraphingCalculator_V0.4.js" defer></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js?v=1"></script>
 
     <div id="nav_bar">
