--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script src="js/statisticsGraphingCalculator_V0.4.js" defer></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js?v=1"></script>
+    <script src="https://cdn.plot.ly/plotly-2.0.0.min.js"></script>
 
     <div id="nav_bar">
         <img id="nav_logo" src="img/bar_chart.png" draggable="false">   
