--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Graphify - Statistics</title>
-    <link rel="stylesheet" href="../css/statisticsGraphingCalculator_V0.4.css">
-    <link rel="icon" href="../img/bar_chart_blue.png">
+    <link rel="stylesheet" href="/css/statisticsGraphingCalculator_V0.4.css">
+    <link rel="icon" href="/img/bar_chart_blue.png">
 </head>
 
 <body>
