--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>Graphify - Statistics</title>
     <link rel="stylesheet" href="graphify-statistics/css/statisticsGraphingCalculator_V0.4.css">
-    <link rel="icon" href="img/bar_chart_blue.png">
+    <link rel="icon" href="graphify-statistics/img/bar_chart_blue.png">
 </head>
 
 <body>
-    <script src="js/statisticsGraphingCalculator_V0.4.js" defer></script>
-    <script src="https://cdn.plot.ly/plotly-2.0.0.min.js"></script>
+    <script src="graphify-statistics/js/statisticsGraphingCalculator_V0.4.js" defer></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js?v=1"></script>
 
     <div id="nav_bar">
         <img id="nav_logo" src="img/bar_chart.png" draggable="false">   
