--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Graphify - Statistics</title>
     <link rel="stylesheet" href="css/statisticsGraphingCalculator_V0.4.css">
-    <link rel="icon" href="/graphify-statistics/img/bar_chart_blue.png">
+    <link rel="icon" href="img/bar_chart_blue.png">
 </head>
 
 <body>
