--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Graphify - Statistics</title>
     <link rel="stylesheet" href="/graphify-statistics/css/statisticsGraphingCalculator_V0.4.css">
     <link rel="icon" href="img/bar_chart_blue.png">
+
+    <base href="/graphify-statistics/">
 </head>
 
 <body>
